--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write ./src/",
-    "lint:js": "eslint ./src/**/*.js"
+    "lint:js": "eslint ./src/**/*.js",
+    "lint:scss": "stylelint ./css/**/*.scss"
   },
   "author": "",
   "license": "ISC",
@@ -14,6 +15,9 @@
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "stylelint": "^15.10.3",
+    "stylelint-config-standard-scss": "^11.0.0",
+    "stylelint-prettier": "^4.0.2"
   }
 }
