--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,7 @@
             }
           ],
         "camelcase": ["error"],
-        "eqeqeq": ["error", "always"]
+        "no-unused-vars": "off"
     } 
     
 }
