--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "format": "prettier --write ./src/",
     "lint:js": "eslint ./src/**/*.js",
-    "lint:scss": "stylelint ./css/**/*.scss"
+    "lint:scss": "stylelint ./css/**/*.scss",
+    "lint": "npm run lint:js && npm run lint:scss",
+    "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
+    "husky": "^8.0.3",
     "prettier": "^3.0.3",
     "stylelint": "^15.10.3",
     "stylelint-config-standard-scss": "^11.0.0",
